changed an Integer method due to 1.4.2 and 1.5 incompatabilities.  Now works with 1.4.2 Java
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@420 ee1c2863-5742-f242-9f82-d2f51c100d09